[package]
name = "whitenoise"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
publish = false

[lib]
test = true
bench = false

[features]
default = []
firmware = [
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:embassy-executor",
    "dep:embassy-rp",
    "dep:embassy-sync",
    "dep:embassy-usb",
    "dep:panic-probe",
    "dep:static_cell",
]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"], optional = true }
embassy-rp = { version = "0.10.0", features = ["defmt", "critical-section-impl", "rp2040", "time-driver"], optional = true }
embassy-sync = { version = "0.8.0", features = ["defmt"], optional = true }
embassy-usb = { version = "0.6.0", features = ["defmt"], optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
static_cell = { version = "2.1.1", optional = true }

[[bin]]
name = "whitenoise"
path = "src/bin/whitenoise.rs"
required-features = ["firmware"]
test = false
bench = false

[profile.release]
debug = 2
lto = true
opt-level = "s"
codegen-units = 1
